# enriching_3dBAG_with_building_metrics

./: CMakeLists.txt  README.md
output/: 2b_updated.city.json
src/: definitions.h  geomtools.cpp  main.cpp
